--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,14 @@
   "workbench.activityBar.visible": true,
   "workbench.colorTheme": "Visual Studio Dark",
   "workbench.fontAliasing": "antialiased",
-  "workbench.statusBar.visible": true
+  "workbench.statusBar.visible": true,
+  "cSpell.words": [
+    "canales",
+    "corresponde",
+    "funciones",
+    "inicializado",
+    "mapas",
+    "punteros",
+    "representación"
+  ]
 }
